# CSProject5

./: CMakeLists.txt  Make  README.md  help.h  house_1.ppm  linmath.h  main.c  ouret.ppm  output.ppm
GLFW/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
GLFW/examples/: Makefile  cmake_install.cmake
GLFW/src/: Makefile  cmake_install.cmake
GLFW/tests/: Makefile  cmake_install.cmake
